--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -1,1 +1,47 @@
+* {
+ box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+ list-style: none;
+ text-decoration: none;   
+}
+mg {
+    width: 100%;
+}
 
+.page-navbar {
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    width: 100%;
+    padding-right: 50%;
+}
+
+.navbar-brand {
+    position: relative;
+    left: 30%;
+}
+
+.container {
+    max-width: 1200px; 
+    width: 100%;
+}
+
+.navbar-nav {
+    position: relative;
+    left: 70%
+}
+
+.navbar-nav .nav-item {
+    margin: 0 15px;
+}
+
+.navbar-nav .get-started {
+    border: 1px solid grey;
+    background-color: rgb(252, 222, 112, 0.3);
+    border-radius: 25px;
+    padding: 0 10px;
+    position: relative;
+    right: -40%;
+    color: aliceblue;
+}
